--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/assets/fav.png" />
     <title>Before & After Stitcher</title>
 
     <!-- Google tag (gtag.js) -->
@@ -27,23 +28,23 @@
             },
             colors: {
               brand: {
-                50: '#f0fdf4',
-                100: '#dcfce7',
-                200: '#bbf7d0',
-                300: '#86efac',
-                400: '#4ade80',
+                50: '#e8f9ed',
+                100: '#d1f3db',
+                200: '#a3e7b7',
+                300: '#75db93',
+                400: '#5dd27b',
                 500: '#45ca63',
-                600: '#16a34a',
-                700: '#15803d',
-                800: '#166534',
-                900: '#14532d',
+                600: '#37a24f',
+                700: '#2a7a3b',
+                800: '#1c5128',
+                900: '#0e2914',
               },
               accent: {
                 orange: '#ff3a00',
-                red: '#ff4726',
+                focus: '#314544',
               },
               dark: {
-                DEFAULT: '#262626',
+                DEFAULT: '#1c1c1c',
                 muted: '#575757',
                 deep: '#0c0c0c',
               },
